sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:19: error: ')' expected but '}' found.
  }
  ^